[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krista-infinispan"
version = "1.0.0"
description = "Cache operations package with Infinispan integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "requests>=2.25.0",
]


[project.urls]
Homepage = "https://github.com/Vijay2351989/krista-infra-python/krista-infinispan"
Repository = "https://github.com/Vijay2351989/krista-infra-python/krista-infinispan"
